# AyanHub

A2A/: agent1.py  agent2.py  card.py  cli.py  client.py  client2.py  main.py  mainagent.py  prac.py  pyproject.toml  server.py  server2.py
A2AEcommerce/: client.py  database.py  faqagent.py  main.py  menuagent.py  model.py  orderagent.py  pyproject.toml  schema.py  server.py
AICLIPractice/test/: gemini-extension.json
AICLIPractice/testing2/commands/fs/: grep-code.toml
Auth_FastApi/: auth.py  main.py  pyproject.toml
Auth_FastApi/full_auth/: authentication.py  mainfile.py
Auto-Inventory-Project/: agent1.py  data.json  data.py  database.py  main.py  mainAgent.py  model.py  orderplaceagent.py  pyproject.toml  schema.py
AutoFolderFile-Agent/: main.py  pyproject.toml
BankingAssignment/: data.json  main.py  model.py  pyproject.toml  utils.py
Big-Voice-Platform/: agentno1.py  agentvoice.py  data.json  database.py  main.py  model.py  prac.py  pyproject.toml  schema.py
Big-Voice-Platform/Frontend/voiceplatform/: package-lock.json  package.json
Big-Voice-Platform/Frontend/voiceplatform/src/: App.css  App.jsx
Big-Voice-Platform/router/: routes.py
Business-Automation/Backend/business-automate/: agent1.py  agent2.py  database.py  main.py  model.py  products.json  pyproject.toml  schema.py
Business-Automation/business-automation/: package-lock.json  package.json
Business-Automation/business-automation/src/: App.css
Business-Automation/business-automation/src/components/: Dashboard.jsx
HackathonPhase3Chatbot/history/prompts/004-backend-chatkit-integrate/: 1-create-chatkit-backend-spec.spec.prompt.md  2-generate-chatkit-plan.plan.prompt.md
HackathonPhase3Chatbot/specs/004-backend-chatkit-integrate/: data-model.md  plan.md  research.md  spec.md  tasks.md
HackathonPhase3Chatbot/specs/004-backend-chatkit-integrate/checklists/: requirements.md
HackathonPhase3Chatbot/specs/004-backend-chatkit-integrate/contracts/: chat_api.yaml
HackathonPhase3Chatbot/specs/005-chatkit-backend-setup/: tasks.md
src/: App.jsx  BelowTrending.jsx  Cart.jsx  Checkout.jsx  ContactUs.jsx  Hero.jsx  Jewelry.jsx  ProductDetails.jsx  Reviews.jsx  TrendingProducts.jsx  Watches.jsx
src/components/: Animation.jsx  Footer.jsx  Header.jsx
src/lib/: supabaseClient.js
