[project]
name = "business-automate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.13",
    "openai-agents>=0.0.19",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.41",
    "stripe>=12.2.0",
]
